--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -4,53 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Base.CardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="20dp"
-    android:weightSum="2">
+    android:layout_height="wrap_content"
+    android:background="#859fb9"
+    android:gravity="center"
+    android:minWidth="200dp"
+    android:orientation="vertical"
+    android:padding="10dp">
+
+    <TextView
+        android:id="@+id/tvLocality"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/AppIntroDefaultHeading"
+        android:textColorHighlight="@color/background" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="108dp"
-        android:layout_height="169dp"
-        android:layout_weight="0.1"
+        android:id="@+id/imageInfoWindow"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:background="#859fb9"
         app:srcCompat="@drawable/bar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:minWidth="200dp"
         android:orientation="vertical">
 
 
-        <TextView
-            android:id="@+id/tvLocality"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8" />
 
-
-        <TextView
-            android:id="@+id/tvLat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvLng"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tvSnippet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/detalheBtn"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:onClick="detailsSearch"
             android:text="Segure para detalhes"
             tools:style="@style/Widget.AppCompat.Button.Borderless" />
@@ -59,11 +53,12 @@
             android:id="@+id/geraRotaBtn"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:elevation="13dp"
             android:text="Clique para gerar rota" />
 
+
+    </LinearLayout>
 
     </LinearLayout>
 
