--- a/app/src/main/res/layout/content_detalhes.xml
+++ b/app/src/main/res/layout/content_detalhes.xml
@@ -19,30 +19,49 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout android:layout_width="fill_parent"
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cabecalho" android:orientation="vertical"
-            >
-            <TextView
-                android:id="@+id/nomeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="17sp" />
+            android:foregroundGravity="center"
+            android:gravity="center_vertical"
+            android:minHeight="50dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/telefoneText"
+            <ImageView
+                android:id="@+id/perfilType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Aguarde enquanto carrega os detalhes"
-                android:textSize="17sp" />
+                android:layout_weight="1"
+                android:background="@drawable/bar" />
 
-            <TextView
-                android:id="@+id/ratingText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="17sp" />
+            <LinearLayout
+                android:id="@+id/cabecalho"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/nomeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/telefoneText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Aguarde enquanto carrega os detalhes"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/ratingText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="17sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
