--- a/app/src/main/res/layout/content_detalhes.xml
+++ b/app/src/main/res/layout/content_detalhes.xml
@@ -25,21 +25,21 @@
             android:layout_height="wrap_content"
             android:foregroundGravity="center"
             android:gravity="center_vertical"
-            android:minHeight="50dp"
+            android:minHeight="90dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/perfilType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/bar" />
+                android:layout_weight="1" />
 
             <LinearLayout
                 android:id="@+id/cabecalho"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
                 <TextView
                     android:id="@+id/nomeText"
