--- a/app/src/main/res/layout/content_detalhes.xml
+++ b/app/src/main/res/layout/content_detalhes.xml
@@ -8,8 +8,6 @@
     android:background="@color/colorPrimary"
     android:backgroundTint="@color/colorPrimary"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.juniorf.tcc.DetalhesActivity">
@@ -21,22 +19,25 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/gradient_color"
             android:foregroundGravity="center"
             android:gravity="center_vertical"
-            android:minHeight="90dp"
-            android:orientation="horizontal">
+            android:minHeight="80dp"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp">
 
             <ImageView
                 android:id="@+id/perfilType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:minWidth="10dp"
+                android:paddingLeft="6dp" />
 
             <LinearLayout
                 android:id="@+id/cabecalho"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:paddingLeft="10dp">
@@ -76,7 +77,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.15"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:paddingTop="5dp">
 
                 <ExpandableListView
                     android:id="@+id/listView"
