--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="branco">#f4f1f2</color>
+    <color name="blue">#2878ff</color>
+    <color name="gray">#c1c1c1</color>
+
 </resources>
