retirando alguns comentarios, ajeitado a inserção sem tipo, retirado alguns logs e toasts pra debug

--- a/app/src/main/res/layout/insert_location.xml
+++ b/app/src/main/res/layout/insert_location.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_color"
+    android:orientation="vertical">
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
         android:id="@+id/nomeEditText"
-        android:hint="@string/nome" />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
+        android:hint="@string/nome"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/wallet_dim_foreground_inverse_holo_dark" />
+
+    <EditText
         android:id="@+id/telefoneEditText"
-        android:hint="@string/telefone" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/telefone"
+        android:inputType="textPersonName"
+        android:textColorHint="@color/wallet_dim_foreground_inverse_holo_dark" />
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner" />
-
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
