--- a/app/src/main/res/layout/insert_answer.xml
+++ b/app/src/main/res/layout/insert_answer.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:id="@+id/textAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/textAnswer"
-        android:hint="@string/nome" />
+        android:hint="@string/nome"
+        android:inputType="textPersonName"
+        android:textColorLink="@color/blue" />
 
 
 
