--- a/app/src/main/res/layout/insert_location.xml
+++ b/app/src/main/res/layout/insert_location.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_color"
@@ -22,6 +23,32 @@
         android:hint="@string/telefone"
         android:inputType="numberPassword"
         android:textColorHint="@color/wallet_dim_foreground_inverse_holo_dark" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:foregroundGravity="center_vertical|center_horizontal"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:text="Pressione para inserir detalhes" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/insertDetails"
+            android:layout_width="98dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:backgroundTint="@color/blue"
+            app:srcCompat="@android:drawable/ic_menu_add" />
+    </LinearLayout>
 
     <Spinner
         android:id="@+id/spinner"
