--- a/app/src/main/res/layout/content_detalhes.xml
+++ b/app/src/main/res/layout/content_detalhes.xml
@@ -60,13 +60,30 @@
                     android:textColor="@color/branco"
                     android:textSize="17sp" />
 
-                <TextView
-                    android:id="@+id/ratingText"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/branco"
-                    android:textSize="17sp" />
+                    android:gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/ratingText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingRight="50dp"
+                        android:text=""
+                        android:textColor="@color/branco"
+                        android:textSize="17sp" />
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/detailsFloating"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:backgroundTint="@color/blue"
+                        app:srcCompat="@android:drawable/ic_menu_view" />
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
