Adicionando mudanças com insert login e location com novo tipo e icone de lixo

--- a/app/src/main/res/layout/insert_type.xml
+++ b/app/src/main/res/layout/insert_type.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/gradient_color"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15dp">
 
     <TextView
         android:id="@+id/textView5"
@@ -22,6 +23,7 @@
         android:ems="10"
         android:hint="@string/nome"
         android:inputType="textPersonName"
+        android:textColor="@color/branco"
         android:textColorLink="@color/blue" />
 
 
