--- a/app/src/main/res/layout/insert_location.xml
+++ b/app/src/main/res/layout/insert_location.xml
@@ -3,13 +3,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/gradient_color"
         android:orientation="vertical"
         android:padding="12dp">
@@ -57,7 +57,17 @@
             android:scrollHorizontally="false"
             android:textColorHint="@color/wallet_dim_foreground_inverse_holo_dark" />
 
+        <EditText
+            android:id="@+id/horariosEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:maxLines="2"
+            android:hint="00:00 - 00:00 (Horario de funcionamento)"
+            android:textColorHint="@color/wallet_dim_foreground_inverse_holo_dark" />
+
         <LinearLayout
+            android:id="@+id/llspinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -79,6 +89,28 @@
                 app:srcCompat="@android:drawable/stat_notify_more" />
 
         </LinearLayout>
+
+         <LinearLayout
+            android:id="@+id/lltipocriado"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/tipoCriadoId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:foregroundGravity="center_horizontal"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/branco"
+                android:textDirection="locale"
+                android:textSize="22sp" />
+
+         </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
