--- a/app/src/main/res/menu/menu_detalhes.xml
+++ b/app/src/main/res/menu/menu_detalhes.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_tutorial"
-        android:icon="@mipmap/ic_help"
+        android:icon="@mipmap/ic_tutorial_gm"
         android:title="Tutorial"
         android:orderInCategory="1"
         app:showAsAction="ifRoom" />
