--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,7 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/ivInitTutorialButton"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="86dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.7"
                     android:background="@mipmap/ic_tutorial_gm"
@@ -48,7 +48,9 @@
                     android:id="@+id/textView3"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_weight="0.3"
+                    android:foregroundGravity="center_vertical"
                     android:gravity="center_vertical|center_horizontal"
                     android:text="Clique no icone para ver o tutorial.."
                     android:textColor="@color/background"
