--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -70,10 +70,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:background="@mipmap/ic_gm"
+                    android:background="@drawable/gm"
                     android:foregroundGravity="center"
-                    android:maxWidth="50dp"
-                    android:minHeight="300dp"
                     app:civ_border_color="#FF000000"
                     app:civ_border_width="2dp" />
 
