--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,62 +27,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:foregroundGravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="20dp"
+            android:weightSum="1">
 
-            <LinearLayout
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ivInitMapButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ivInitTutorialButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="86dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="0.7"
-                    android:background="@mipmap/ic_tutorial_gm"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp" />
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.3"
-                    android:foregroundGravity="center_vertical"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:text="Clique no icone para ver o tutorial.."
-                    android:textColor="@color/background"
-                    android:textColorLink="@color/background" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="4"
+                android:background="@drawable/gm"
                 android:foregroundGravity="center"
-                android:gravity="center"
-                android:orientation="vertical">
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp" />
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ivInitMapButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/gm"
-                    android:foregroundGravity="center"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="Clique no mapa para iniciar"
-                    android:textColor="@color/background" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:gravity="center_horizontal"
+                android:text="Clique no mapa para iniciar"
+                android:textColor="@color/background" />
 
         </LinearLayout>
 
