--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_tutorial"
+        android:icon="@mipmap/ic_tutorial_gm"
+        android:title="Tutorial"
+        android:orderInCategory="0"
+        app:showAsAction="ifRoom" />
 </menu>
