--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_tutorial"
+        android:enabled="false"
         android:icon="@mipmap/ic_tutorial_gm"
-        android:title="Tutorial"
         android:orderInCategory="1"
+        android:title="Tutorial"
         app:showAsAction="ifRoom" />
     
 </menu>
