Ajeitando as imagens

--- a/app/src/main/res/menu/menu_detalhes.xml
+++ b/app/src/main/res/menu/menu_detalhes.xml
@@ -9,7 +9,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete"
-        android:icon="@drawable/lixeirinha"
+        android:icon="@mipmap/ic_lixeirinha"
         android:title="Deletar"
         app:showAsAction="always" />
 </menu>
