--- a/app/src/main/res/layout/insert_message.xml
+++ b/app/src/main/res/layout/insert_message.xml
@@ -17,6 +17,7 @@
         android:textStyle="bold" />
 
     <EditText
+        android:textColorHint="@color/wallet_bright_foreground_disabled_holo_light"
         android:id="@+id/textAnswer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
